Bug 772113: Expose source map URLs via Debugger.Script r=jimb